--- a/css/font/_flaticon.scss
+++ b/css/font/_flaticon.scss
@@ -33,7 +33,7 @@
   text-transform: none;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-smoothing: antialiased;
+  font-smooth: antialiased;
     }
 
     .flaticon-001-facebook:before { content: "\f100"; }
